fix having to scroll on mobile

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  height: 100vh;
   height: 100dvh;
   width: 100vw;
 }
@@ -13,6 +14,7 @@
 
 .mobile-map {
   height: calc(100vh - 53px);
+  height: calc(100dvh - 53px);
   width: 100%;
 }
 
